--- a/views/item/home.ejs
+++ b/views/item/home.ejs
@@ -1,6 +1,6 @@
-<div class="container-home text-center">
+<div class="container-home">
     <div class="logo-container-home mt-5">
-        <img src="logo/Logo_RMUTK.png" alt="RMUTK Logo" class="logo-home img-fluid">
+        <img src="logo/Logo.png" alt="Logo" class="logo-home img-fluid">
     </div>
     <div class="content-title-home my-4">
         ระบบแนะนำการเลือกศึกษาหลักสูตรระดับปริญญาตรี
@@ -8,8 +8,8 @@
         สาขาวิชาวิทยาการคอมพิวเตอร์
     </div>
     <div class="container-login-home">
-        <a href="/auth/google" class="btn btn-primary btn-lg login-button-home">กรุณาเข้าสู่ระบบ</a>
-        <div class="note-home mt-3 text-muted">
+        <a href="/auth/google" class="btn btn-primary login-button-home">กรุณาเข้าสู่ระบบ</a>
+        <div class="note-home mt-3">
             หมายเหตุ : ใช้เมลของมหาวิทยาลัยเทคโนโลยีราชมงคลกรุงเทพเท่านั้น
         </div>
     </div>
